# llmpairs

./: README.md  main.py  pyproject.toml
code/: getdata_AIME-Con.py
data/processed/: facit_yount_2021_hadsx_itemtext (full_item).csv  facit_yount_2021_hadsx_itemtext.csv  facit_yount_2021_hadsx_itemtext_annotated.csv  gilbert_meta_103_full-itemtext.csv
notebooks/: analysis_AIME-Con.ipynb  eda.ipynb  eda_edu.ipynb
results/: all_tables_item_scores.csv  facit_yount_2021_hadsx_IRT_BT.csv  facit_yount_2021_hadsx_IRT_BT_full.csv  facit_yount_2021_hadsx_IRT_BT_indicators.csv  facit_yount_2021_hadsx_item_parameters.csv  facit_yount_2021_hadsx_person_theta.csv  gilbert_meta_102_itemtext.csv  item_bradley_terry_scores.csv  respondent_bradley_terry_scores.csv
results/facit_yount_2021_hadsx/: data.parquet  metadata.json  pairwise_df.parquet  scored_df.parquet
results/facit_yount_2021_hadsx_fullitem/: data.parquet  metadata.json  pairwise_df.parquet  scored_df.parquet
results/gilbert_meta_102/: gilbert_meta_102_irt_items.csv  gilbert_meta_102_itemtext.csv
results/gilbert_meta_103/: gilbert_meta_103_all_item_scores.csv  gilbert_meta_103_irt_items.csv  gilbert_meta_103_irt_persons.csv  gilbert_meta_103_itemtext.csv
results/gilbert_meta_103_test_run/: data.parquet  metadata.json  pairwise_df.parquet  scored_df.parquet
results/gilbert_meta_104/: gilbert_meta_104_all_item_scores.csv  gilbert_meta_104_irt_persons.csv
results/gilbert_meta_2/: gilbert_meta_2_all_item_scores.csv  gilbert_meta_2_itemtext.csv
results/gilbert_meta_26 (REMOVED)/: gilbert_meta_26_itemtext.csv
(+26 files in other folders)
